crates/plan/tests/snapshots/fixtures__mongo_sort_limit_est.snap
---
source: crates/plan/tests/fixtures.rs
expression: render(&mongo(&name))
---
MongoDb Estimated
#0 SORT est=- act=- loops=-
  ! Sorts without an index (blocking sort in memory)
  #1 COLLSCAN on orders est=- act=- loops=-
    Filter: {"total":{"$gte":100}}
findings:
  Low FullScan node=Some(1): COLLSCAN on orders | Reads every row (the plan has no row counts). | db.orders.createIndex({ total: 1 })
  Low TempStructure node=Some(0): SORT sorts without an index | Sorts without an index (blocking sort in memory). | An index whose order matches the sort lets rows come out already sorted.
