crates/plan/tests/snapshots/fixtures__mssql_key_lookup_act.snap
---
source: crates/plan/tests/fixtures.rs
expression: render(&plan)
---
SqlServer Actual
#0 Nested Loops est=50 act=59 loops=1 self=0.0ms (0%)
  #1 Index Seek on dbo.plan_orders.ix_plan_orders_customer est=50 act=59 loops=1 self=0.0ms (2%)
    Seek: customer_id = (42)
  #2 Key Lookup on dbo.plan_orders.PK__plan_ord__3213E83F34834332 est=1 act=1 loops=59 self=0.0ms (98%)
    Seek: id = [shop].[dbo].[plan_orders].[id]
findings:
