crates/plan/tests/snapshots/fixtures__mssql_missing_index_est.snap
---
source: crates/plan/tests/fixtures.rs
expression: render(&plan)
---
SqlServer Estimated
#0 Nested Loops est=1000 act=- loops=-
  #1 Clustered Index Scan on dbo.plan_orders.PK__plan_ord__3213E83F34834332 est=1 act=- loops=-
    Predicate: [shop].[dbo].[plan_orders].[total] as [o].[total]=(123.45)
  #2 Clustered Index Seek on dbo.customers.PK__customer__3213E83F6E18541F est=1 act=- loops=-
    Seek: id = [shop].[dbo].[plan_orders].[customer_id] as [o].[customer_id]
missing: CREATE INDEX ix_plan_orders_total ON [dbo].[plan_orders] ([total])
findings:
  High MissingIndex node=Some(1): Missing index on dbo.plan_orders | SQL Server estimates 97% improvement. | CREATE INDEX ix_plan_orders_total ON [dbo].[plan_orders] ([total])
  High FullScan node=Some(1): Clustered Index Scan on dbo.plan_orders.PK__plan_ord__3213E83F34834332 | Reads 50,000 rows. | Add an index on the filtered or joined columns, or narrow the query.
