crates/plan/tests/snapshots/fixtures__mssql_scan_filter_est.snap
---
source: crates/plan/tests/fixtures.rs
expression: render(&plan)
---
SqlServer Estimated
#0 Clustered Index Scan on dbo.plan_orders.PK__plan_ord__3213E83F34834332 est=3197 act=- loops=-
  Predicate: [shop].[dbo].[plan_orders].[total]>(900.00) AND [shop].[dbo].[plan_orders].[status]='cancelled'
findings:
  High FullScan node=Some(0): Clustered Index Scan on dbo.plan_orders.PK__plan_ord__3213E83F34834332 | Reads 50,000 rows. | Add an index on the filtered or joined columns, or narrow the query.
