crates/plan/tests/snapshots/fixtures__mssql_sort_act.snap
---
source: crates/plan/tests/fixtures.rs
expression: render(&plan)
---
SqlServer Actual
#0 Sort est=100 act=100 loops=1 self=13.0ms (57%)
  #1 Clustered Index Scan on dbo.plan_orders.PK__plan_ord__3213E83F34834332 est=50000 act=50000 loops=1 self=9.0ms (39%)
findings:
  Medium FullScan node=Some(1): Clustered Index Scan on dbo.plan_orders.PK__plan_ord__3213E83F34834332 | Reads 50,000 rows. | Add an index on the filtered or joined columns, or narrow the query.
